# picfrt

./: .gitignore  CMakeLists.txt  main.c  session.vim  shell.nix
ext/freetype-2.9/: CMakeLists.txt
src/: CMakeLists.txt  EPD_7in5_V2_test.c  EPD_Test.h  hobbit.h
